remove topcoat, fix gallery width as rendered on iphone,
* use  http://localhost/index.html for android

--- a/app/views/timeline/timeline.less
+++ b/app/views/timeline/timeline.less
@@ -16,7 +16,6 @@
 
 
 .gallery {
-  min-width: 320px;
   padding: 0 5px;
   .crop img {
     width: 100%;
