--- a/www/stylesheets/application.less
+++ b/www/stylesheets/application.less
@@ -37,6 +37,7 @@ body {
 	position: absolute;
 	width: 100%; 
 	z-index: 100; 
+	text-align: center;
 }
 
 .nowrap {
